[package]
name = "podcomp"
version = "0.1.0"
authors = ["semtexzv <mhornick@redhat.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies.yaml]
package = "serde_yaml"
version = "0.8"

[dependencies]
dotenv = "0.15.0"
log = "0.4.8"
env_logger = "0.7.1"
structopt = "0.3.4"
serde = { version = "*", features = ["derive"]}
